--- a/index.css
+++ b/index.css
@@ -14,7 +14,6 @@ html {
 .nav-container {
     display: flex;
     flex-flow: row wrap;
-    background-color: aliceblue;
     justify-content: center;
     padding: 2rem;
     background-color: rgb(50,45,50);
@@ -44,7 +43,7 @@ html {
 .home, .about, .contact {
     margin-left: 3rem;
     color: #fff;
-    /* text-decoration: none; */
+    text-decoration: none;
 }
 /* 
 .links:hover {
@@ -105,6 +104,7 @@ html {
     color: black;
     background-color: rgb(255,191,0);
     font-size: 1.5rem;
+    text-decoration: none;
 }
 
 .button:hover {
